WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146049
Web Inspector: Do not show JavaScriptCore builtins in inspector
https://bugs.webkit.org/show_bug.cgi?id=146049
Summary
Web Inspector: Do not show JavaScriptCore builtins in inspector
Joseph Pecoraro
Reported
2015-06-16 23:05:32 PDT
* SUMMARY Do not show JavaScriptCore builtins in inspector. * STEPS TO REPRODUCE 1. Inspect about:blank 2. Do a global search for "@call" => get to see the source for things like Function.prototype.call and Array.prototype.map * NOTES - The format is a pseudo JavaScript that doesn't parse as proper JavaScript so syntax-highlighting is off - Breakpoints don't really work in built-ins, though we somehow can pause in the scripts, so the experience is poor if we did allow it for now
Attachments
[PATCH] Proposed Fix
(1.13 KB, patch)
2015-06-16 23:06 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(1.50 KB, patch)
2015-10-29 22:13 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-06-16 23:06:20 PDT
Created
attachment 255002
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 2
2015-06-16 23:07:50 PDT
***
Bug 145654
has been marked as a duplicate of this bug. ***
Joseph Pecoraro
Comment 3
2015-06-16 23:08:30 PDT
<
rdar://problem/21247912
>
WebKit Commit Bot
Comment 4
2015-06-17 14:35:03 PDT
Comment on
attachment 255002
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 255002 Committed
r185670
: <
http://trac.webkit.org/changeset/185670
>
WebKit Commit Bot
Comment 5
2015-06-17 14:35:06 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 6
2015-06-18 07:24:45 PDT
(In reply to
comment #4
)
> Comment on
attachment 255002
[details]
> [PATCH] Proposed Fix > > Clearing flags on attachment: 255002 > > Committed
r185670
: <
http://trac.webkit.org/changeset/185670
>
It made 2 tests fail everywhere. Could you check it? Maybe updating the expected file is the proper fix.
Joseph Pecoraro
Comment 7
2015-06-18 11:31:37 PDT
(In reply to
comment #6
)
> (In reply to
comment #4
) > > Comment on
attachment 255002
[details]
> > [PATCH] Proposed Fix > > > > Clearing flags on attachment: 255002 > > > > Committed
r185670
: <
http://trac.webkit.org/changeset/185670
> > > It made 2 tests fail everywhere. Could you check it? > Maybe updating the expected file is the proper fix.
Interesting. I have yet to reproduce this myself running the fast/profiler directory to these tests individually. I'm updating to see if I can reproduce. I agree, updating the expected results would be good, but it also seems as if the bots get different results from time to time.
Joseph Pecoraro
Comment 8
2015-06-18 12:18:36 PDT
I am still unable to reproduce locally, but the bots can reproduce a lot. Rather than keep them red, I rolled this out while I investigate.
https://trac.webkit.org/changeset/185715
Joseph Pecoraro
Comment 9
2015-10-29 22:09:02 PDT
***
Bug 150710
has been marked as a duplicate of this bug. ***
Joseph Pecoraro
Comment 10
2015-10-29 22:12:51 PDT
Last time we tried this it broke profiler tests, and I think that was because we were doing this in the Recompiler visiting. This time I'm doing the same thing but gathering the list of sources to inform the inspector about is separate from recompiling. Take 2!
Joseph Pecoraro
Comment 11
2015-10-29 22:13:08 PDT
Created
attachment 264381
[details]
[PATCH] Proposed Fix
Geoffrey Garen
Comment 12
2015-10-29 22:14:34 PDT
Comment on
attachment 264381
[details]
[PATCH] Proposed Fix r=me Can we test this?
Joseph Pecoraro
Comment 13
2015-10-29 22:19:10 PDT
(In reply to
comment #12
)
> Comment on
attachment 264381
[details]
> [PATCH] Proposed Fix > > r=me > > Can we test this?
We can write some form of test. I'll look into that tomorrow. In this case we could do a search for "@call" and ensure that we don't see such results, but that test is weak in the sense that if built-ins ever change syntax and that "@call" or some equivalent goes away and we end up testing nothing. Still worth looking into though!
WebKit Commit Bot
Comment 14
2015-10-29 23:01:07 PDT
Comment on
attachment 264381
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 264381 Committed
r191779
: <
http://trac.webkit.org/changeset/191779
>
WebKit Commit Bot
Comment 15
2015-10-29 23:01:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug