Web Inspector: Do not show JavaScriptCore builtins in inspector https://bugs.webkit.org/show_bug.cgi?id=146049

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-06-17
Reviewed by Timothy Hatcher.

* debugger/Debugger.cpp:

Canonical link: https://commits.webkit.org/164123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185670 268f45cc-cd09-0410-ab3c-d52691b4dbfc